packages/typ/tests/fixtures/diagnostics/0340_fun_higher_order_callback_mismatch_10.ml.expected
File "0340_fun_higher_order_callback_mismatch_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0340_fun_higher_order_callback_mismatch_10 is not a valid module name.

File "0340_fun_higher_order_callback_mismatch_10.ml", line 2, characters 33-34:
2 | let _ = apply_kappa (fun b -> if b then 9 else 10)
                                     ^
Error: The value b has type int but an expression was expected of type 
       bool because it is in the condition of an if-statement
