packages/typ/tests/fixtures/diagnostics/0340_fun_higher_order_callback_mismatch_10.ml
let apply_kappa (f : int -> int) = f 9
let _ = apply_kappa (fun b -> if b then 9 else 10)
